// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CompaniesPage Snapshot Tests > matches snapshot for companies list 1`] = `
<div>
  <div
    class="container py-3 py-md-4"
    style="padding-bottom: 60px;"
  >
    <div
      class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center mb-3 mb-md-4 gap-2"
    >
      <h1
        class="h2 mb-0"
        data-qa="companies-title"
      >
        Companies
      </h1>
      <a
        href="/companies/new"
      >
        <button
          class="btn btn-primary  w-100 w-md-auto"
          data-qa="companies-new-button"
        >
          Add
        </button>
      </a>
    </div>
    <div
      class="card shadow-sm mb-3 mb-md-4"
      data-qa="companies-filters"
    >
      <div
        class="card-body"
      >
        <div
          class="row g-2"
        >
          <div
            class="col-12 col-md-4"
          >
            <label
              class="form-label small"
            >
              Job Type
            </label>
            <input
              class="form-control form-control-sm"
              data-qa="companies-filter-job-type"
              placeholder="Filter by job type"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="card shadow-sm"
    >
      <div
        class="table-responsive"
      >
        <table
          class="table table-hover mb-0"
          data-qa="companies-table"
        >
          <thead
            class="table-light"
          >
            <tr>
              <th>
                Name
              </th>
              <th
                class="d-none d-md-table-cell"
              >
                Location
              </th>
              <th
                class="d-none d-lg-table-cell"
              >
                Job Type
              </th>
              <th>
                Actions
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              data-qa="company-row-1"
            >
              <td>
                <a
                  class="text-decoration-none fw-medium"
                  data-qa="company-name-link-1"
                  href="/companies/1"
                >
                  Tech Corp
                </a>
                <div
                  class="d-md-none mt-1"
                >
                  <small
                    class="text-muted"
                  >
                    San Francisco, CA
                  </small>
                </div>
              </td>
              <td
                class="d-none d-md-table-cell"
              >
                San Francisco, CA
              </td>
              <td
                class="d-none d-lg-table-cell"
              >
                Technology
              </td>
              <td>
                <div
                  class="d-flex gap-1 gap-md-2"
                >
                  <a
                    class="btn btn-sm btn-outline-primary"
                    data-qa="company-edit-button-1"
                    href="/companies/1/edit"
                  >
                    Edit
                  </a>
                  <button
                    class="btn btn-sm btn-outline-danger"
                    data-qa="company-delete-button-1"
                  >
                    Delete
                  </button>
                </div>
              </td>
            </tr>
            <tr
              data-qa="company-row-2"
            >
              <td>
                <a
                  class="text-decoration-none fw-medium"
                  data-qa="company-name-link-2"
                  href="/companies/2"
                >
                  Startup Inc
                </a>
                <div
                  class="d-md-none mt-1"
                >
                  <small
                    class="text-muted"
                  >
                    New York, NY
                  </small>
                </div>
              </td>
              <td
                class="d-none d-md-table-cell"
              >
                New York, NY
              </td>
              <td
                class="d-none d-lg-table-cell"
              >
                Technology
              </td>
              <td>
                <div
                  class="d-flex gap-1 gap-md-2"
                >
                  <a
                    class="btn btn-sm btn-outline-primary"
                    data-qa="company-edit-button-2"
                    href="/companies/2/edit"
                  >
                    Edit
                  </a>
                  <button
                    class="btn btn-sm btn-outline-danger"
                    data-qa="company-delete-button-2"
                  >
                    Delete
                  </button>
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="bg-light border-top py-2 px-3 "
      data-qa="status-bar"
      style="position: fixed; bottom: 0px; left: 0px; right: 0px; z-index: 1000;"
    >
      <div
        class="container-fluid"
      >
        <div
          class="d-flex justify-content-between align-items-center"
        >
          <small
            class="text-muted"
            data-qa="status-bar-message"
          >
            Ready
          </small>
          <small
            class="text-muted"
            data-qa="status-bar-timestamp"
          >
            12:00:00 PM
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CompaniesPage Snapshot Tests > matches snapshot for empty state 1`] = `
<div>
  <div
    class="container py-3 py-md-4"
    style="padding-bottom: 60px;"
  >
    <div
      class="d-flex flex-column flex-md-row justify-content-between align-items-start align-items-md-center mb-3 mb-md-4 gap-2"
    >
      <h1
        class="h2 mb-0"
        data-qa="companies-title"
      >
        Companies
      </h1>
      <a
        href="/companies/new"
      >
        <button
          class="btn btn-primary  w-100 w-md-auto"
          data-qa="companies-new-button"
        >
          Add
        </button>
      </a>
    </div>
    <div
      class="card shadow-sm mb-3 mb-md-4"
      data-qa="companies-filters"
    >
      <div
        class="card-body"
      >
        <div
          class="row g-2"
        >
          <div
            class="col-12 col-md-4"
          >
            <label
              class="form-label small"
            >
              Job Type
            </label>
            <input
              class="form-control form-control-sm"
              data-qa="companies-filter-job-type"
              placeholder="Filter by job type"
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="card shadow-sm text-center py-5"
    >
      <div
        class="card-body"
      >
        <p
          class="text-muted mb-4"
          data-qa="companies-empty-state"
        >
          No companies found.
        </p>
      </div>
    </div>
    <div
      class="bg-light border-top py-2 px-3 "
      data-qa="status-bar"
      style="position: fixed; bottom: 0px; left: 0px; right: 0px; z-index: 1000;"
    >
      <div
        class="container-fluid"
      >
        <div
          class="d-flex justify-content-between align-items-center"
        >
          <small
            class="text-muted"
            data-qa="status-bar-message"
          >
            Ready
          </small>
          <small
            class="text-muted"
            data-qa="status-bar-timestamp"
          >
            12:00:00 PM
          </small>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CompaniesPage Snapshot Tests > matches snapshot for loading state 1`] = `
<div>
  <div
    class="d-flex flex-column align-items-center justify-content-center p-5"
    data-qa="loading"
  >
    <div
      class="spinner-border text-primary mb-3"
      data-qa="loading-spinner"
      role="status"
    >
      <span
        class="visually-hidden"
      >
        Loading...
      </span>
    </div>
    <p
      class="text-muted"
      data-qa="loading-message"
    >
      Loading companies...
    </p>
  </div>
</div>
`;
